Fix : Showing result alignment

--- a/sass/site/compatibility/woocommerce/woocommerce.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce.scss
@@ -1335,7 +1335,7 @@ p.demo_store,
 	}
 
 	.woocommerce-result-count {
-		margin: 0.6em 0 1em;
+		margin: 1em 0 1em;
 		line-height: 1;
 	}
 
